--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "ionic-app-base",
+  "name": "Pokédex do JV",
+  "version": "0.0.1",
+  "description": "Pokedex do JV",
   "integrations": {
     "capacitor": {}
   },
